--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amplify-angular-template",
-  "version": "0.0.0",
+  "name": "Controlar 27 Taxi Application",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,8 +18,19 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "@types/feather-icons": "^4.29.4",
+    "bootstrap": "^5.3.3",
+    "feather-icons": "^4.29.2",
+    "font-awesome": "^4.7.0",
     "aws-amplify": "^6.6.6",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -27,6 +38,7 @@
     "@angular-devkit/build-angular": "^17.3.4",
     "@angular/cli": "^17.3.4",
     "@angular/compiler-cli": "^17.3.0",
+    "@angular/localize": "^19.1.3",
     "@aws-amplify/backend": "^1.5.1",
     "@aws-amplify/backend-cli": "^1.3.0",
     "@types/jasmine": "~5.1.0",
