--- a/amplify.yml
+++ b/amplify.yml
@@ -3,12 +3,17 @@ backend:
   phases:
     build:
       commands:
+        - ECHO *** BACKEND BUILD ***
         - npm ci --cache .npm --prefer-offline
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
       commands:
+        - ECHO *** FRONTEND BUILD ***
+        - node -v
+        - npm -v
+        - amplify -v
         - npx ng version
     build:
       commands:
